argocd/media-server/ersatztv/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ersatztv
  name: ersatztv
spec:
  ports:
    - name: http
      port: 8409
      targetPort: 8409
  selector:
    app: ersatztv
